@@ -1703,9 +1703,17 @@ test(601, is.unsorted(DT$y))
 test(602, order(DT$x,DT$y), 1:20)
 
 # Test that as.list.data.table no longer copies via unclass, so speeding up sapply(DT,class) and lapply(.SD,...) etc, #2000
-DT = data.table(a=1:1e7,b=1:1e7,c=1:1e7,d=1:1e7)
+DT = data.table(a=1:1e7,b=1:1e7,c=1:1e7,d=1:1e7)   # 152MB
 test(603, system.time(sapply(DT,class))["user.self"] < 0.01)
 
+# Tests on loopability, i.e. that overhead of [.data.table isn't huge, as in speed example in example(":=")
+# These are just to catch slow down regressions where instead of 1s it takes 40s
+test(604, system.time(for (i in 1:1000) nrow(DT))["user.self"] < 0.5)
+test(605, system.time(for (i in 1:1000) ncol(DT))["user.self"] < 0.5)
+test(606, system.time(for (i in 1:1000) length(DT[[1L]]))["user.self"] < 0.5) # much faster than nrow, TO DO: replace internally
+DT = as.data.table(matrix(1L,nrow=100000,ncol=100))
+test(607, system.time(for (i in 1:1000) DT[i,V1:=i])["user.self"] < 5)  # safe margin
+test(608, DT[1:1000,V1], 1:1000)
 
 # TO DO: tests on double in add hoc by
 # TO DO: test on -i that retain key e.g.  DT[-4] and DT[-4,sum(v),by=b] should both retain key
